# microCertiSec

./: .gitignore  pyproject.toml  setup.py
docs/: library_of_rules.md  rules_ordered.md
microCertiSec/: microCertiSec.py  microCertiSec_flask.py  minimal_example.py
microCertiSec/core/: edge.py  edges.py  load_model.py  model.py  node.py  nodes.py
microCertiSec/core/parsers/: parser_tuhh_json.py  parser_vienna_python.py
microCertiSec/library_of_rules/: rule_library.py
src/microCertiSec/: microCertiSec.py
