[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microCertiSec"
version = "0.0.1"
authors = [
  { name="Dominik Jacob", email="dominik.jacob@tuhh.de" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/microCertiSec/**"
]


[project.urls]
Homepage = "https://github.com/dominokos/microCertiSec"
Issues = "https://github.com/dominokos/microCertiSec/issues"